--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -49,7 +49,7 @@
   <div class="container">
     <div class="row">
       <div class="text-center p-4">
-        <h4>© 2024 Copyright - Paola Vallejo & Juan David Martínez</h4>
+        <h4>© 2024 Copyright - Alejandro Garcés Ramírez</h4>
       </div>
     </div>
   </div>
