--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -23,8 +23,8 @@ height="24"
             <a class="nav-link active" aria-current="page" href="{ url 'news'}">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
+            <a class="nav-link" href="{% url 'statistics' %}">Statistics</a>
+          </li> 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
